chore: add missing description meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Fireside- A decentralized chatapp">
+	<meta name="keywords" content="Fireside, chat, decentralized, messaging">
 	<title>Fireside</title>
 	<link rel="stylesheet" href="/src/styles/global.css">
 	<link rel="icon" href="/favicon.svg" type="image/x-icon">
